Closed
Bug 412680
Opened 15 years ago
Closed 15 years ago
[10.4] Save As... dialog's "All Files" truncated in filepicker
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: stephend, Assigned: jaas)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
105.22 KB,
image/png
|
Details | |
2.69 KB,
patch
|
nick.kreeger
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Build ID: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3pre) Gecko/2008011604 Minefield/3.0b3pre Summary: Save As... dialog's "All Files" truncated in filepicker Steps to Reproduce: 1. Click on http://osmirrors.cerias.purdue.edu/pub/ubuntu-releases/gutsy/ubuntu-7.10-desktop-i386.iso 2. Click on the "Save File" radio button and choose "OK" Expected Results: The "All Files" filter in the "Save As..." filepicker should be clearly visible, especially on window resize Actual Results: Still truncated, even on window resize
Reporter | ||
Updated•15 years ago
|
Flags: blocking1.9?
Comment 1•15 years ago
|
||
Isn't this a native dialog?
Reporter | ||
Comment 2•15 years ago
|
||
(In reply to comment #1) > Isn't this a native dialog? Yes, it is; however: 1) This bug does NOT occur on 10.4 with 2.0.0.11, suggesting that we've made changes that affect this dialog 2) Nor does it occur on 10.5 with trunk or 2.0.0.11 3) In "Main" of Minefield's preferences, set "Always ask me where to save files" 4) I've exaggerated the width of the dialog in the screenshot, to show you that it doesn't auto-adjust its width
(In reply to comment #2) > (In reply to comment #1) > > Isn't this a native dialog? > > Yes, it is; however: > > 1) This bug does NOT occur on 10.4 with 2.0.0.11, suggesting that we've made > changes that affect this dialog Switched to the Cocoa impl of nsFilePicker. The part of the code that sets up the menu and label seems to be here: http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/widget/src/cocoa/nsFilePicker.mm&rev=1.18&mark=117-162#116
Keywords: regression
(In reply to comment #3) > Switched to the Cocoa impl of nsFilePicker. > > The part of the code that sets up the menu and label seems to be here: By which I mean we use the nsFilePicker code to customize the native dialogue, and Firefox switched from the widget/src/mac's nsFilePicker impl to widget/src/cocoa's nsFilePicker impl, which probably also means switched from the Carbon (native) save dialogue to the Cocoa (native) save dialogue.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P3
Summary: Save As... dialog's "All Files" truncated in filepicker → [10.4] Save As... dialog's "All Files" truncated in filepicker
This fixes two bugs really. First of all we should fall back to the filter text if we don't have a proper name for the filter, like gtk does (and probably windows). That gets rid of the empty menu items. Secondly, our sizing strategy was bunk. The default width for the popup button is set to 180 which is reasonable I think.
Comment 6•15 years ago
|
||
Comment on attachment 302959 [details] [diff] [review] fix v1.0 r=me.
Attachment #302959 -
Flags: review+
Attachment #302959 -
Flags: superreview?(roc)
Attachment #302959 -
Flags: superreview?(roc) → superreview+
landed on trunk
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 8•15 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008021304 Minefield/3.0b4pre as well as the nightly build on 10.4.11.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•