fix filter popup menu in file picker (save dialog, etc.). b=412680 r=kreeger sr=roc